Sun Jan 18 10:41:33 CET 2015
multimedia/libcuefile-r475-i486-1_microlinux.txz: Added.
multimedia/gst-plugins-bad-0.10.23-i486-1_microlinux.txz: Added.
multimedia/gst-plugins-ugly-0.10.19-i486-2_microlinux.txz: Added.
multimedia/gst-ffmpeg-0.10.13-i486-2_microlinux.txz: Added.
multimedia/gst1-plugins-good-1.4.1-i486-1_microlinux.txz: Added.
multimedia/gst1-libav-1.4.1-i486-1_microlinux.txz: Added.
  Extra runtime dependencies for Brasero to handle some multimedia stuff.
locale/mozilla-firefox-langpack-31.4.0-i486-1_microlinux.txz: Upgraded.
locale/mozilla-thunderbird-langpack-31.4.0-i486-1_microlinux.txz: Upgraded.
+--------------------------+
Wed Jan 14 09:29:27 CET 2015
MLED 14.1 32-bit is released! 

Third time's the charm. This is a complete respin, based on the Xfce desktop
environment, with many changes under the hood. 

For more information, check out http://www.microlinux.fr/mled.php and read the
files 'RELEASE-NOTES.txt', 'MLED-HOWTO.txt', 'MIGRATION-HOWTO.txt' and
'FAQ.txt' in the current directory.

Have fun!
+--------------------------+
Fri Jan  9 08:01:36 CET 2015
l/libupnp-1.6.17-i486-1_microlinux.txz: Added.
l/cryptopp-5.6.2-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Jan  8 10:17:33 CET 2015
xfce/luna-wallpapers-0.2-noarch-1_microlinux.txz: Added.
+--------------------------+
Wed Jan  7 12:31:42 CET 2015
xap/simple-scan-2.32.0.2-i486-1_microlinux.txz: Added.
l/imlib2-1.4.6-i486-1_microlinux.txz: Added.
d/scons-2.3.4-i486-1_microlinux.txz: Added.
l/tolua++-1.0.93-i486-1_microlinux.txz: Added.
xap/conky-1.9.0-i486-1_microlinux.txz: Added.
xfce/xfce4-xkb-plugin-0.5.6-i486-1_microlinux.txz: Added.
xfce/xfce4-notes-plugin-1.7.7-i486-1_microlinux.txz: Added.
+--------------------------+
Tue Jan  6 10:14:18 CET 2015
l/wxGTK-2.8.12-i486-1_microlinux.txz: Removed.
l/wxPython-2.8.12.1-i486-1_microlinux.txz: Added.
xap/audacity-2.0.6-i486-2_microlinux.txz: Rebuilt.
l/pyxdg-0.25-i486-1_microlinux.txz: Added.