@@ -15,6 +15,7 @@ pidgin:ADD
 sane:ADD
 windowmaker:ADD
 xine-lib:ADD
+xsane:ADD
 xscreensaver:ADD
 
 # Skip
@@ -44,5 +45,4 @@ xlockmore:SKP
 xmms:SKP
 xpaint:SKP
 xpdf:SKP
-xsane:SKP
 xv:SKP
