@@ -1,12 +1,12 @@
 [Desktop Entry]
+Encoding=UTF-8
 Name=Scanner Tool
 Name[de]=Scannersoftware
 Name[fr]=Acquisition d'images
-Comment=Simple Scan
-Exec=simple-scan
+Comment=XSane
+Exec=xsane
 Icon=scanner
 Terminal=false
 Type=Application
-StartupNotify=true
 Categories=Graphics;
-X-GNOME-Gettext-Domain=simple-scan
+StartupNotify=true
