@@ -957,6 +957,7 @@ pidgin
 sane 
 windowmaker 
 xine-lib 
+xsane 
 xscreensaver 
 
 # XFCE
