@@ -289,6 +289,5 @@ xlockmore
 xmms 
 xpaint 
 xpdf 
-xsane 
 xv 
 
