@@ -1,1 +1,0 @@
-simple-scan-*.tar.gz
