@@ -1,13 +1,0 @@
-           |-----handy-ruler------------------------------------------------------|
-simple-scan: simple-scan (simple scanning utility)
-simple-scan:
-simple-scan: Simple Scan is a simple scanning utility without the overwhelming
-simple-scan: options of XSane.
-simple-scan:
-simple-scan:
-simple-scan: 
-simple-scan:
-simple-scan:
-simple-scan:
-simple-scan: Package created by Niki Kovacs <info@microlinux.fr>
-
